
ChangeLog
 [ + added, - removed, * changed ]
 * 11May2022 Recovers merger flags [-no]-translate-data-addresses removed by commit cf9e823b32e1441d9b426dc37e7ed7320dd8a59c
 * 11May2022 Fixes incorrect sequence of initialization of CUDA instrumentation components
 * 28Mar2022 Fixes check for optional headers in AX_FIND_INSTALLATION
 * 23Mar2022 Applies corrections in MPI_Comm_spawn support
 * 08Mar2022 Reworks synchronization methods to work with and among multiple apps
 + 08Mar2022 Adds option to disable rpath per dependency
 + 04Mar2022 Adds option to disable rpath in the objects built
 * 02Mar2022 Fixes OpenACC states
 * 25Feb2022 Adds rpath to MPI libraries and improves the AX_FIND_INSTALLATION macro
 * 16Feb2022 Changes user function instrumentation to work with function names only, using function adresses as fallback
 + 16Feb2022 Adds support for GOMP_taskloop_ull and changes interposition mechanism for a more robust one
 + 24Jan2022 Adds OPENACC instrumentation in host and CUDA devices
 * 14Jan2022 Reworks allocated memory tracker and removes need for critical zones
 + 04Jan2022 Adds XML option to exclude some MPI_Comm_* calls from tracing 
 * 16Dec2022 Assigns same ID's to Infiniband counters ignoring Mellanox driver version
 * 09Nov2021 Updates and upgrades CUDA support
 * 09Nov2021 Ensures native and uncore counters are uniquely identified
 * 19Oct2021 Fixes trace control file checks, skipping them if needed structures are not allocated
 * 09Oct2020 GASPI parameters now start at 1 and PCF has labels to their actual values
 + 01Oct2020 Adds instrumentation support for gaspi_queue_create/delete
 + 30Sep2020 Adds instrumentation support for gaspi_read_notify & gaspi_read_list_notify
 * 27Sep2021 Fixes states in OpenMP taskgroup and taskloop regions 
 + 22Sep2021 Adds dependency lines between instantiation and execution of OpenMP tasks for GNU libgomp runtime
 + 09Sep2020 Adds callers at GASPI instrumentation points