@@ -87,6 +87,12 @@ libmpimpi2prv_la_SOURCES = \
 mpimpi2prv_SOURCES = \
  ../merger.c
 
+if HAVE_PAPI
+if !HAVE_PAPI_EMBEDDED
+  PAPI_LINKER_FLAGS = @PAPI_LDFLAGS@ @PAPI_RPATH@ @PAPI_LIBS@
+endif
+endif
+
 libmpimpi2prv_la_CFLAGS = -DPARALLEL_MERGE -I$(top_srcdir)/merger -I$(top_srcdir)/src/common -I$(top_srcdir)/include -I$(MERGER_INC)/common -I$(PRV_MERGER_INC) -I$(TRF_MERGER_INC) @MPI_CFLAGS@
 if HAVE_BINUTILS
 libmpimpi2prv_la_CFLAGS += @BFD_CFLAGS@ @LIBERTY_CFLAGS@
@@ -94,7 +100,7 @@ endif
 libmpimpi2prv_la_LDFLAGS = -o libmpimpi2prv.la $(CFLAGS) 
 
 mpimpi2prv_CFLAGS = -DPARALLEL_MERGE -I$(top_srcdir)/merger -I$(top_srcdir)/src/common -I$(top_srcdir)/include -I$(MERGER_INC)/common -I$(PRV_MERGER_INC) -I$(TRF_MERGER_INC) @MPI_CFLAGS@ 
-mpimpi2prv_LDFLAGS = libmpimpi2prv.la $(COMMON_LIB)/libcommon.la -o mpimpi2prv @MPI_LDFLAGS@ @MPI_RPATH@ @MPI_LIBS@
+mpimpi2prv_LDFLAGS = libmpimpi2prv.la $(COMMON_LIB)/libcommon.la -o mpimpi2prv $(PAPI_LINKER_FLAGS) @MPI_LDFLAGS@ @MPI_RPATH@ @MPI_LIBS@
 if HAVE_BINUTILS
 mpimpi2prv_CFLAGS += @BFD_CFLAGS@ @LIBERTY_CFLAGS@
 mpimpi2prv_LDFLAGS += @BFD_LDFLAGS@ @BFD_RPATH@ @BFD_LIBS@ @LIBERTY_LDFLAGS@ @LIBERTY_RPATH@ @LIBERTY_LIBS@
